--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <form id="create-task-form" action="#" method="post">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <select id="priority">
+        <option value="High">High</option>
+        <option value="Medium">Medium</option>
+        <option value="Low">Low</option>
+      </select>
+      <br>
+      <label for="duedate">Due Date:</label>
+      <input type="date" id="duedate" name="duedate">
       <input type="submit" value="Create New Task">
     </form>
 
